feat: content search

--- a/hugo.toml
+++ b/hugo.toml
@@ -3,6 +3,10 @@ languageCode = 'zh-cn'
 title = '806-DEV 知识库'
 theme = 'DoIt'
 
+# 输出格式配置 - 搜索功能需要
+[outputs]
+  home = ["HTML", "RSS", "JSON"]
+
 [params]
   # 网站描述
   description = "专注于技术学习与分享的知识库，提供系统化的学习路径和实用的技术指南"
@@ -12,9 +16,9 @@ theme = 'DoIt'
   
   # 作者信息
   [params.author]
-    name = "806-DEV团队"
-    email = "dev806group@example.com"
-    link = "https://github.com/USTB-806"
+    name = "806 开发部"
+    email = "fridemn@qq.com"
+    link = "https://github.com/orgs/USTB-806/teams/development"
   
   # 导航菜单配置
   [params.header]
@@ -27,7 +31,7 @@ theme = 'DoIt'
       # LOGO
       logo = ""
       # 名称
-      name = "806-DEV"
+      name = "806-DEV "
       # 预加载
       pre = ""
       # 后加载
@@ -67,11 +71,35 @@ theme = 'DoIt'
 # 搜索配置
 [params.search]
   enable = true
-  type = "algolia"
-  
-# 评论配置
-[params.comment]
-  enable = true
+  # 搜索引擎的类型 ("algolia", "fuse", "pagefind")
+  type = "fuse"
+  # 文章内容最长索引长度
+  contentLength = 4000
+  # 搜索框的占位提示语
+  placeholder = ""
+  # 最大结果数目
+  maxResultLength = 10
+  # 结果内容片段长度
+  snippetLength = 50
+  # 搜索结果中高亮部分的 HTML 标签
+  highlightTag = "em"
+  # 是否在搜索索引中使用基于 baseURL 的绝对路径
+  absoluteURL = false
+  [params.search.algolia]
+    index = ""
+    appID = ""
+    searchKey = ""
+  [params.search.fuse]
+    # https://fusejs.io/api/options.html
+    isCaseSensitive = false
+    minMatchCharLength = 2
+    findAllMatches = false
+    location = 0
+    threshold = 0.3
+    distance = 100
+    ignoreLocation = false
+    useExtendedSearch = false
+    ignoreFieldNorm = false
   
 # 页面配置
 [params.page]
@@ -81,3 +109,55 @@ theme = 'DoIt'
   wordCount = true
   # 是否显示阅读时间
   readingTime = true
+  
+  # 评论系统设置
+  [params.page.comment]
+    enable = false
+    # Disqus 评论系统设置
+    [params.page.comment.disqus]
+      enable = false
+      # Disqus 的 shortname，用来在文章中启用 Disqus 评论系统
+      shortname = ""
+    # Gitalk 评论系统设置
+    [params.page.comment.gitalk]
+      enable = false
+      owner = ""
+      repo = ""
+      clientId = ""
+      clientSecret = ""
+    # Valine 评论系统设置
+    [params.page.comment.valine]
+      enable = false
+      appId = ""
+      appKey = ""
+      placeholder = ""
+      avatar = "mp"
+      meta = ""
+      pageSize = 10
+      lang = ""
+      visitor = true
+      recordIP = true
+      highlight = true
+      enableQQ = false
+      serverURLs = ""
+    # Waline 评论系统设置
+    [params.page.comment.waline]
+      enable = false
+      serverURL = ""
+      pageview = false
+      comment = true
+    # Giscus 评论系统设置 (推荐使用，基于 GitHub Discussions)
+    [params.page.comment.giscus]
+      enable = false
+      # owner/repo
+      dataRepo = ""
+      dataRepoId = ""
+      dataCategory = ""
+      dataCategoryId = ""
+      dataMapping = "pathname"
+      dataReactionsEnabled = "1"
+      dataEmitMetadata = "0"
+      dataInputPosition = "bottom"
+      lightTheme = "light"
+      darkTheme = "dark"
+      dataLang = "zh-CN"
